--- a/students_accommodation/.pre-commit-config.yaml
+++ b/students_accommodation/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-      - id: check-added-large-files
+#      - id: check-added-large-files
       - id: name-tests-test
       - id: requirements-txt-fixer
 
@@ -16,11 +16,11 @@ repos:
 #      - id: black
 #        args: [--line-length=200]
 
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-      - id: flake8
-        args: [--max-line-length=200]
+#  - repo: https://github.com/PyCQA/flake8
+#    rev: 6.1.0
+#    hooks:
+#      - id: flake8
+#        args: [--max-line-length=200]
 
 ## isort is a Python utility / library to sort imports alphabetically, and automatically separated into sections and by type
 #  - repo: https://github.com/pycqa/isort
