Create file parser, config parser, make changes at entities, settings.

--- a/students_accommodation/settings.ini
+++ b/students_accommodation/settings.ini
@@ -1,21 +1,22 @@
 [DEFAULT]
 version=1.0.0
 
-[Paths]
-source_dir=/source
-#students_path=%(source_dir)s/test_students.json
-#rooms_path=%(source_dir)s/test_rooms.json
-
 [Database]
 user_name=root
 password=12344321
 host=localhost
 db_name=hostelDB
-url
+url =
 
 [Formats]
-delimiter=,
+delimiter=;
+date_format=%%Y-%%m-%%dT%%H:%%M:%%S.%%f
+
+[Paths]
+source_dir=/source
+#students_path=%(source_dir)s/test_students.json
+#rooms_path=%(source_dir)s/test_rooms.json
 
 [CLI variables]
-students_path = test.json
+students_path = new.xml
 rooms_path = test1.csv
