Separate connectors to DBs and loaders. Modify main.py. Add new CLI parameter to choose DB name, modify config parser for this stuff.

--- a/students_accommodation/properties/settings.ini
+++ b/students_accommodation/properties/settings.ini
@@ -1,12 +1,15 @@
 [DEFAULT]
 version=1.0.0
 
-[Database]
+[MySQL]
 user_name=root
-password=12344321
+password=***
 host=localhost
 port=3306
 db_name=hostelDB
+
+[Postgres]
+user_name=root
 
 [Formats]
 delimiter=;
