Modify loaders to DB. Split to different functions. Add some configs.

--- a/students_accommodation/properties/settings.ini
+++ b/students_accommodation/properties/settings.ini
@@ -11,6 +11,10 @@ db_name=hostelDB
 [Postgres]
 user_name=root
 
+[Tables]
+table1=room_list
+table2=students_list
+
 [Formats]
 delimiter=;
 date_format=%%Y-%%m-%%dT%%H:%%M:%%S.%%f
