Modify class objects, loader to mysql for full load to db, config parser for more general representation.

--- a/students_accommodation/properties/settings.ini
+++ b/students_accommodation/properties/settings.ini
@@ -2,11 +2,11 @@
 version=1.0.0
 
 [MySQL]
-user_name=root
+user=root
 password=***
 host=localhost
 port=3306
-db_name=hostelDB
+database=hostelDB
 
 [Postgres]
 user_name=root
