--- a/students_accommodation/properties/settings.ini
+++ b/students_accommodation/properties/settings.ini
@@ -21,5 +21,5 @@ date_format=%%Y-%%m-%%dT%%H:%%M:%%S.%%f
 
 [Paths]
 source_dir=/source
-#students_path=%(source_dir)s/test_students.json
-#rooms_path=%(source_dir)s/test_rooms.json
+students_path=%(source_dir)s/students.json
+rooms_path=%(source_dir)s/rooms.json
