--- a/students_accommodation/properties/logging.conf
+++ b/students_accommodation/properties/logging.conf
@@ -2,31 +2,26 @@
 keys=root,studentsLog
 
 [handlers]
-keys=fileHandler,consoleHandler
+keys=FileHandler
 
 [formatters]
 keys=appFormatter
 
 [logger_root]
-level=CRITICAL
-handlers=consoleHandler
+level=DEBUG
+handlers=FileHandler
 
 [logger_studentsLog]
-level=INFO
-handlers=fileHandler
+level=DEBUG
+handlers=FileHandler
 qualname=studentsLog
 propagate=0
 
-[handler_consoleHandler]
-class=StreamHandler
+[handler_FileHandler]
+class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=appFormatter
-args=(sys.stdout,)
-
-[handler_fileHandler]
-class=handlers.RotatingFileHandler
-formatter=appFormatter
-args=("./logs/config.log",'a', 10000, 6)
+args=("./logs/config.log", 'a', 10000, 6,)
 
 [formatter_appFormatter]
 format=%(asctime)s - %(filename)s - %(funcName)s - %(lineno)d - %(levelname)s - %(message)s
