fix: test docker file, add new orchestration files, fix bugs.

--- a/docker_containers_deployment/students_accommodation/properties/settings.ini
+++ b/docker_containers_deployment/students_accommodation/properties/settings.ini
@@ -2,8 +2,8 @@
 version=1.0.0
 
 [MySQL]
-user=root
-password=12344321
+user=defaultUser
+password=defaultPWD
 host=localhost
 port=3306
 database=hostelDB
