--- a/docker_containers_deployment/students_accommodation/properties/settings.ini
+++ b/docker_containers_deployment/students_accommodation/properties/settings.ini
@@ -2,7 +2,7 @@
 version=1.0.0
 
 [MySQL]
-user=root
+user=defaultUSER
 password=defaultPWD
 host=localhost
 port=3306
@@ -20,6 +20,6 @@ delimiter=;
 date_format=%%Y-%%m-%%dT%%H:%%M:%%S.%%f
 
 [Paths]
-source_dir=/source
+source_dir=./source
 students_path=%(source_dir)s/students.json
 rooms_path=%(source_dir)s/rooms.json
