fix: add automation of setup Data Base to docker file, fixed bugs with automation of processes.

--- a/docker_containers_deployment/Dockerfile
+++ b/docker_containers_deployment/Dockerfile
@@ -47,16 +47,10 @@ RUN service mysql stop && \
 	service mysql start && \
     service --status-all && \
     mysql -password -e "USE mysql;\
-                        CREATE USER '${MySQLUser}'@'localhost' IDENTIFIED BY '${MySQLPassword}';\
+                        CREATE USER '${MySQLUser}'@'localhost' IDENTIFIED WITH caching_sha2_password BY '${MySQLPassword}';\
                         GRANT ALL PRIVILEGES ON * . * TO '${MySQLUser}'@'localhost';\
                         FLUSH PRIVILEGES;" && \
     service mysql restart
-
-#    mysql -password -e "ALTER USER '${MySQLUser}'@'localhost' IDENTIFIED BY '${MySQLPassword}';"
-
-#    mysql -password -e "CREATE USER '${MySQLUser}'@'localhost' IDENTIFIED BY '${MySQLPassword}';\
-#                         GRANT ALL PRIVILEGES ON * . * TO '${MySQLUser}'@'localhost';\
-#                         FLUSH PRIVILEGES;SELECT user,authentication_string,plugin,host FROM mysql.user;"
 
 # Install layer with Git.
 RUN apt-get update -y && \
@@ -74,6 +68,12 @@ RUN apt-get update -y && \
 # Set environment variables for MC.
 ENV TERM=xterm
 RUN export TERM=xterm
+
+# Run testing files inside container & instalation DB
+RUN /test_docker.sh && \
+    service mysql restart && \
+    cd /students_accommodation && \
+    bash -c './orchestration/setupDB.sh'
 
 # Set environment variables.
 ENV HOME /root
