--- a/student_accommodation_by_rooms/config
+++ b/student_accommodation_by_rooms/config
@@ -1,5 +1,5 @@
 USERNAME=defaultUSER
 PASSWORD=defaultPWD
-HOST=localhost
+HOST=mysql
 DATABASE=hostelDB
-URL="jdbc:mysql://localhost/hostelDB"
+URL="jdbc:mysql://mysql/hostelDB"
