build&fix: final bug fixing docker compose and docker files.

--- a/student_accommodation_by_rooms/config
+++ b/student_accommodation_by_rooms/config
@@ -2,4 +2,4 @@ USERNAME=defaultUSER
 PASSWORD=defaultPWD
 HOST=mysql
 DATABASE=hostelDB
-URL="jdbc:mysql://mysql/hostelDB"
+URL="jdbc:mysql://mysql:3306/hostelDB"
