refactor&docs: restructure project folders, fix bugs, change style of docker files.

--- a/student_accommodation_by_rooms/app/Dockerfile
+++ b/student_accommodation_by_rooms/app/Dockerfile
@@ -1,10 +1,4 @@
-# Download base image python3 v3.10.12.
 FROM python:3.10
-
-LABEL Name="python_app"
-LABEL Maintainer="ApenkaAnastasiya on DockerHub"
-LABEL Version="0.0.1"
-LABEL Description="Docker image with Python CLI app."
 
 COPY ./ /app
 
@@ -15,4 +9,4 @@ RUN apt-get update && \
     pip3 install --no-cache-dir -r requirements.txt && \
     apt-get clean
 
-ENTRYPOINT ["bash"]
+CMD ["bash"]
